@@ -1,10 +1,12 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.417 2009-02-13 03:25:24 guru Exp $
+	$Id: ChangeLog,v 1.418 2009-02-13 19:07:42 guru Exp $
 -----------------------------------------------------------------------------------------
 -----------------------------------------------------------------------------------------
 2009-02-15
 	* GMT 4.4.0 finalized and released
 -----------------------------------------------------------------------------------------
+2009-02-14	pwessel
+	* x2sys/x2sys_init.c:	Failed to set units/method defaults if -G was set and no -C/N specified.
 
 2009-02-13	pwessel
 	* website/*:		Scripts and makefile modified to deal with new arrangement
